--- a/PTI-Ear-Trainer/View/Howtoplay.xaml
+++ b/PTI-Ear-Trainer/View/Howtoplay.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PTI_Ear_Trainer.View.About"
+﻿<Window x:Class="PTI_Ear_Trainer.View.Howtoplay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Icon="icon.ico"
         WindowStartupLocation="CenterScreen"
-        Title="Ear-Trainer - About" Height="200" Width="300" MinHeight="200" MinWidth="300">
+        Title="How to Play" Height="200" Width="300" MinHeight="200" MinWidth="300">
     <Grid>
         
     </Grid>
