--- a/PTI-Ear-Trainer/View/About.xaml
+++ b/PTI-Ear-Trainer/View/About.xaml
@@ -7,8 +7,10 @@
         mc:Ignorable="d"
         Icon="icon.ico"
         WindowStartupLocation="CenterScreen"
-        Title="Ear-Trainer - About" Height="200" Width="300" MinHeight="200" MinWidth="300">
+        Title="Ear-Trainer - About" Height="200" Width="300" MinHeight="200" MinWidth="300"
+        ResizeMode="NoResize">
     <Grid>
-        
+        <TextBlock x:Name="AboutDescprition" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="120" Width="280" Margin="0,10,0,0"/>
+        <Button Content="Close" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" Height="25" Width="50" Click="Close"/>
     </Grid>
 </Window>
