--- a/PTI-Ear-Trainer/View/Howtoplay.xaml
+++ b/PTI-Ear-Trainer/View/Howtoplay.xaml
@@ -7,8 +7,10 @@
         mc:Ignorable="d"
         Icon="icon.ico"
         WindowStartupLocation="CenterScreen"
-        Title="How to Play" Height="200" Width="300" MinHeight="200" MinWidth="300">
+        Title="How to Play" Height="200" Width="300" MinHeight="200" MinWidth="300"
+        ResizeMode="NoResize">
     <Grid>
-        
+        <TextBlock x:Name="Description" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" TextWrapping="Wrap" Height="115" Width="280"/>
+        <Button Content="Close" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" Height="25" Width="50" Click="Close"/>
     </Grid>
 </Window>
