--- a/PTI-Ear-Trainer/View/About.xaml
+++ b/PTI-Ear-Trainer/View/About.xaml
@@ -7,10 +7,24 @@
         mc:Ignorable="d"
         Icon="icon.ico"
         WindowStartupLocation="CenterScreen"
-        Title="Ear-Trainer - About" Height="200" Width="300" MinHeight="200" MinWidth="300"
+        Title="About" Height="350" Width="300" MinHeight="350" MinWidth="300"
         ResizeMode="NoResize">
     <Grid>
-        <TextBlock x:Name="AboutDescprition" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="120" Width="280" Margin="0,10,0,0"/>
-        <Button Content="Close" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" Height="25" Width="50" Click="Close"/>
+        <Image Source="/View/logo.png" Width="160" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
+        <Label x:Name="Version" Content="Version 1.0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,65,0,0" FontWeight="Bold" FontFamily="Verdana"/>
+        <TextBlock x:Name="AboutDescprition" HorizontalAlignment="Left" VerticalAlignment="Top" Height="Auto" Width="245" Margin="15,95,0,0" FontFamily="Verdana">
+            Thank you for using PTI - Ear Trainer.<LineBreak/>
+            We hope you have fun and can improve <LineBreak/>
+            yourself.
+        </TextBlock>
+        <Label x:Name="Creators" Content="Creators:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,137,0,0" FontWeight="Bold" FontFamily="Verdana"/>
+        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15,160,0,0" FontFamily="Verdana" Height="61">
+            Ádám Lámfalusi <LineBreak/>
+            Márton Baldauf <LineBreak/> 
+            André Bilik <LineBreak/>
+            Dávid Fürdős <LineBreak/>
+        </TextBlock>
+        <Label x:Name="Copyright" Content="© 2022 - PTI - Ear Trainer. All rights reserved." HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,170,0,0" FontWeight="Bold"/>
+        <Button Content="Close" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,250,0,0" Height="25" Width="50" Click="Close"/>
     </Grid>
 </Window>
