--- a/PTI-Ear-Trainer/App.xaml
+++ b/PTI-Ear-Trainer/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application x:Class="PTI_Ear_Trainer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PTI_Ear_Trainer"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
          
     </Application.Resources>
