--- a/PTI-Ear-Trainer/View/MainWindow.xaml
+++ b/PTI-Ear-Trainer/View/MainWindow.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
         <Menu>
             <MenuItem Header="Game">
-                <MenuItem x:Name="newGame" Header="New game" HorizontalAlignment="Left" Width="190" Click="NewGame"/>
+                <MenuItem x:Name="MenuItemNewGame" Header="New game" HorizontalAlignment="Left" Width="190"/>
                 <Separator />
                 <MenuItem x:Name="appExit" Header="Close" HorizontalAlignment="Left" Width="190" Click="Close"/>
             </MenuItem>
@@ -30,23 +30,23 @@
             </MenuItem>
         </Menu>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,120,0,0" Grid.Column="1" Grid.Row="1">
-            <Button x:Name="New_Game" Content="New Game" IsDefault="True" Height="60" Width="100" Click="New_Game_Click"/>
+            <Button x:Name="ButtonNewGame" Content="New Game" IsDefault="True" Height="60" Width="100"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,172,200,0" Grid.Row="1">
             <Label x:Name="Player_name" Content="Player name:" HorizontalAlignment="Left" FontSize="16" FontWeight="Bold" Margin="0,0,0,0" Width="110" Grid.Row="1" Grid.Column="1"/>
             <Label x:Name="Difficulty" Content="Difficulty:" HorizontalAlignment="Left" Margin="0,10,0,0" Width="90" FontSize="16" FontWeight="Bold"/>
             <Label x:Name="Game_mode" Content="Game mode:" HorizontalAlignment="Left" Margin="0,20,0,0" Width="110" FontSize="16" FontWeight="Bold"/>
         </StackPanel>
-        <TextBox x:Name="Getname" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,80,0,0" Width="150" Grid.Row="1" Grid.Column="1" TextChanged="SetName"/>
+        <TextBox x:Name="TextBoxName" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,80,0,0" Width="150" Grid.Row="1" Grid.Column="1" TextChanged="SetName"/>
         <Canvas x:Name="Difficulties" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,150,105,0" Grid.Column="1" Grid.Row="1">
-            <RadioButton x:Name="easy" GroupName="difficulties" Content="easy" IsChecked="True" Canvas.Left="15" Checked="Easy_Checked"/>
-            <RadioButton x:Name="medium" GroupName="difficulties" Content="medium" Canvas.Left="82" Checked="Medium_Checked"/>
-            <RadioButton x:Name="hard" GroupName="difficulties" Content="hard" Canvas.Left="157" Checked="Hard_Checked"/>
+            <RadioButton x:Name="easy" GroupName="difficulties" Content="easy" IsChecked="True" Canvas.Left="15"/>
+            <RadioButton x:Name="medium" GroupName="difficulties" Content="medium" Canvas.Left="82"/>
+            <RadioButton x:Name="hard" GroupName="difficulties" Content="hard" Canvas.Left="157"/>
         </Canvas>
         <Canvas x:Name="Game_modes" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,255,100,0" Grid.Column="1" Grid.Row="1">
-            <RadioButton x:Name="practice" GroupName="Gamemode" Content="practice" IsChecked="True" Canvas.Left="10" Checked="Practice_Checked"/>
-            <RadioButton x:Name="casual" GroupName="Gamemode" Content="survival" Canvas.Left="80" Checked="Casual_Checked"/>
-            <RadioButton x:Name="competitive" GroupName="Gamemode" Content="ranked" Canvas.Left="155" Checked="Competitive_Checked"/>
+            <RadioButton x:Name="practice" GroupName="Gamemode" Content="practice" IsChecked="True" Canvas.Left="10"/>
+            <RadioButton x:Name="casual" GroupName="Gamemode" Content="survival" Canvas.Left="80"/>
+            <RadioButton x:Name="competitive" GroupName="Gamemode" Content="ranked" Canvas.Left="155"/>
         </Canvas>
     </Grid>
 </Window>
