--- a/PTI-Ear-Trainer/View/MainWindow.xaml
+++ b/PTI-Ear-Trainer/View/MainWindow.xaml
@@ -37,7 +37,7 @@
             <Label x:Name="Difficulty" Content="Difficulty:" HorizontalAlignment="Left" Margin="0,10,0,0" Width="90" FontSize="16" FontWeight="Bold"/>
             <Label x:Name="Game_mode" Content="Game mode:" HorizontalAlignment="Left" Margin="0,20,0,0" Width="110" FontSize="16" FontWeight="Bold"/>
         </StackPanel>
-        <TextBox x:Name="TextBoxName" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,80,0,0" Width="150" Grid.Row="1" Grid.Column="1" TextChanged="SetName"/>
+        <TextBox x:Name="TextBoxName" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,80,0,0" Width="150" Grid.Row="1" Grid.Column="1"/>
         <Canvas x:Name="Difficulties" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,150,105,0" Grid.Column="1" Grid.Row="1">
             <RadioButton x:Name="easy" GroupName="difficulties" Content="easy" IsChecked="True" Canvas.Left="15"/>
             <RadioButton x:Name="medium" GroupName="difficulties" Content="medium" Canvas.Left="82"/>
