--- a/PTI-Ear-Trainer/View/GameWindow.xaml
+++ b/PTI-Ear-Trainer/View/GameWindow.xaml
@@ -59,7 +59,7 @@
             </ItemsControl.ItemTemplate>
         </ItemsControl>
         <StackPanel Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
-            <Label x:Name="LabelTimer" Content="1:00" FontSize="20" />
+            <Label x:Name="LabelTimer" Content="{Binding Time}" FontSize="20" />
         </StackPanel>
         <local:MusicalNotationIntervalControl Note1="{Binding Note1}" Note2="{Binding Note2}" IntervalVisible="True" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
     </Grid>
