--- a/PTI-Ear-Trainer/View/GameWindow.xaml
+++ b/PTI-Ear-Trainer/View/GameWindow.xaml
@@ -43,6 +43,7 @@
             <TextBlock Text="/" FontSize="20"/>
             <TextBlock Text="{Binding TotalPuzzleCount}" FontSize="20"/>
         </StackPanel>
+        <local:MusicalNotationIntervalControl Note1="{Binding ElementName=global, Path=DataContext.Note1}" Note2="{Binding ElementName=global, Path=DataContext.Note2}" IntervalVisible="{Binding ElementName=global, Path=DataContext.IsGuessed}" IntervalName="{Binding ElementName=global, Path=DataContext.IntervalName}" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
         <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Button x:Name="ButtonPlay" Command="{Binding PlaySoundsCommand}" Content="▶" Foreground="Green" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="40" Background="{x:Null}" BorderBrush="{x:Null}" ToolTip="Replay Interval"/>
         </StackPanel>
@@ -54,13 +55,12 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Button Content="{Binding IntervalShortName}" Command="{Binding GuessIntervalCommand}" IsEnabled="True" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" FontWeight="Bold"/>
+                    <Button Content="{Binding IntervalShortName}" Command="{Binding GuessIntervalCommand}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" FontWeight="Bold"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
         <StackPanel Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Label x:Name="LabelTimer" Content="{Binding Time}" FontSize="20" />
         </StackPanel>
-        <local:MusicalNotationIntervalControl Note1="{Binding Note1}" Note2="{Binding Note2}" IntervalVisible="True" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
     </Grid>
 </Window>
